2007-09-04  Junichi Uekawa  <dancer@debian.org>

	* cow-shell.c: delete .ilist file if reuse flag is not set.

	* cowbuilder.c (cpbuilder_create): add cleanup code.

	* qemubuilder.c: cosmetic fixes.

2007-09-03  Junichi Uekawa  <dancer@debian.org>

	* qemubuilder.c (create_ext3_block_device): use mke2fs -F instead
	of yes|mke2fs
	(fork_qemu): do not handle fd '0', so that tty control can be
	done.  
	(fix_terminal): fix termios after exit from qemu, at least put
	echo on.
	(fork_qemu): Handle exit-codes.

2007-09-01  Junichi Uekawa  <dancer@debian.org>

	* Makefile (check-syntax): add check-syntax target for flymake mode.
	Remove redundant #include statements.

	* cowbuilder.c: run cowdancer-ilistcreate within chroot if it
	exists.

	* parameter.c: 
	* forkexec.c: move fork/exec code from parameter.c

	* tests/014_ilistdump_test.sh: rewrite testsuite to use the generic dumping code.
	* Makefile: install dumping code.
	* cowdancer-ilistdump.1: document
	* cowdancer-ilistdump.c: create dumping code, from testsuite data.

2007-08-31  Junichi Uekawa  <dancer@debian.org>

	* cow-shell.1: add reference to cowdancer-ilistcreate
	* cowdancer-ilistcreate.1: document.
	* Makefile (install): install ilistcreate.
	* cowdancer-ilistcreate.c: create new command.

2007-08-29  Junichi Uekawa  <dancer@debian.org>

	* qemubuilder.c (cpbuilder_create): add aptitude into chroot.

2007-08-21  Junichi Uekawa  <dancer@debian.org>

	* parameter.c: config file parsing improved by patch from Jan-Marek Glogowski 

2007-06-27  Junichi Uekawa  <dancer@debian.org>

	* cowdancer.c (initialize_functions): work around glibc bug: dlvsym failure
	isn't setting dlerror.
	(load_ilist): close fd used for mmap after use.

2007-06-21  Junichi Uekawa  <dancer@debian.org>

	* cowdancer.c (initialize_functions): try to load chown@@GLIBC_2.1
	if it exists.
	It is translated to lchown on i386, if I try to load the unversioned symbol.

2007-06-19  Junichi Uekawa  <dancer@debian.org>
