@@ -8,7 +8,7 @@ cowdancer (0.40) UNRELEASED; urgency=low
     for Etch backport", thanks to Sven Hartge (Closes: #440879).
   * update qemubuilder README.Debian 
 
- -- Junichi Uekawa <dancer@debian.org>  Thu, 06 Sep 2007 19:32:46 +0900
+ -- Junichi Uekawa <dancer@debian.org>  Thu, 06 Sep 2007 23:23:17 +0900
 
 cowdancer (0.39) unstable; urgency=low
 
